--- a/index.html
+++ b/index.html
@@ -1,200 +1,101 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>For You 💌</title>
-  <style>
-    :root{
-      --bg1:#fff0f6; --bg2:#eef6ff;
-      --paper:#fffdf8; --ink:#2a2a2a;
-      --accent:#ff4d8d; --accent2:#ff8fb3;
-      --shadow: 0 18px 45px rgba(0,0,0,.12);
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0; min-height:100vh; display:grid; place-items:center;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color:var(--ink);
-      background: radial-gradient(900px 600px at 20% 20%, var(--bg1), transparent 60%),
-                  radial-gradient(900px 600px at 80% 30%, var(--bg2), transparent 60%),
-                  linear-gradient(135deg, #fff, #f7fbff);
-      overflow:hidden;
-    }
-    .wrap{width:min(520px, 92vw); text-align:center}
-    h1{margin:0 0 10px; font-size:clamp(20px, 3.6vw, 28px)}
-    p.hint{margin:0 0 18px; opacity:.75}
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>For You 💌</title>
+<style>
+:root{
+--bg1:#fff0f6; --bg2:#eef6ff;
+--paper:#fffdf8; --ink:#2a2a2a;
+--accent:#ff4d8d;
+--shadow: 0 18px 45px rgba(0,0,0,.12);
+}
+*{box-sizing:border-box}
+body{
+margin:0; min-height:100vh; display:grid; place-items:center;
+font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+color:var(--ink);
+background: linear-gradient(135deg,#fff0f6,#eef6ff);
+overflow:hidden;
+}
+.wrap{width:min(520px,92vw);text-align:center}
+h1{margin:0 0 10px;font-size:clamp(20px,3.6vw,28px)}
+p.hint{margin:0 0 18px;opacity:.75}
 
-    /* floating hearts */
-    .hearts{position:fixed; inset:0; pointer-events:none; overflow:hidden}
-    .heart{
-      position:absolute; width:14px; height:14px; transform:rotate(45deg);
-      background: var(--accent);
-      opacity:.18;
-      animation: floatUp linear infinite;
-      filter: blur(.2px);
-    }
-    .heart:before,.heart:after{
-      content:""; position:absolute; width:14px; height:14px; border-radius:50%;
-      background:inherit;
-    }
-    .heart:before{left:-7px; top:0}
-    .heart:after{left:0; top:-7px}
-    @keyframes floatUp{
-      from{transform:translateY(110vh) rotate(45deg); }
-      to{transform:translateY(-20vh) rotate(45deg); }
-    }
-
-    /* envelope */
-    .envelope-area{display:grid; place-items:center}
-    .envelope{
-      position:relative;
-      width:min(420px, 90vw);
-      height:260px;
-      margin-inline:auto;
-      cursor:pointer;
-      transform-style:preserve-3d;
-      transition: transform .6s ease;
-    }
-    .envelope:focus{outline: none}
-    .env-shadow{
-      position:absolute; inset:0;
-      border-radius:18px;
-      box-shadow: var(--shadow);
-      z-index:0;
-    }
-    .base{
-      position:absolute; inset:0;
-      border-radius:18px;
-      background: linear-gradient(135deg, #ffd4e3, #ffe9f1 60%, #fff);
-      z-index:1;
-      overflow:hidden;
-    }
-    .base:after{
-      content:""; position:absolute; inset:-40%;
-      background: radial-gradient(circle at 30% 30%, rgba(255,77,141,.25), transparent 55%);
-      transform: rotate(-12deg);
-    }
-
-    .front{
-      position:absolute; inset:0;
-      border-radius:18px;
-      z-index:3;
-      overflow:hidden;
-      background:
-        linear-gradient(135deg, rgba(255,255,255,.35), rgba(255,255,255,0) 55%);
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-      pointer-events:none;
-    }
-
-    /* envelope flap */
-    .flap{
-      position:absolute; left:0; right:0; top:0;
-      height:62%;
-      border-radius:18px 18px 0 0;
-      background: linear-gradient(135deg, #ffb6ce, #ffd9e6);
-      clip-path: polygon(0 0, 100% 0, 50% 90%);
-      transform-origin: top center;
-      transform: rotateX(0deg);
-      transition: transform .7s ease;
-      z-index:4;
-      box-shadow: 0 6px 20px rgba(0,0,0,.08);
-    }
-    .seal{
-      position:absolute;
-      left:50%; top:56%;
-      width:54px; height:54px;
-      transform: translate(-50%,-50%);
-      border-radius:50%;
-      background: radial-gradient(circle at 30% 30%, #fff, #ffd1e1 35%, #ff5a98 75%);
-      display:grid; place-items:center;
-      z-index:5;
-      box-shadow: 0 10px 18px rgba(0,0,0,.16);
-    }
-    .seal span{font-size:22px}
-
-    /* letter */
-    .letter{
-      position:absolute;
-      left:50%; bottom:18px;
-      width:88%;
-      height:88%;
-      transform: translateX(-50%) translateY(30%);
-      background: var(--paper);
-      border-radius:14px;
-      z-index:2;
-      box-shadow: 0 10px 22px rgba(0,0,0,.10);
-      transition: transform .85s ease, opacity .6s ease;
-      opacity:0;
-      overflow:hidden;
-      border: 1px solid rgba(0,0,0,.06);
-    }
-    .letter .topbar{
-      height:46px;
-      background: linear-gradient(90deg, rgba(255,77,141,.18), rgba(255,143,179,.10));
-      display:flex; align-items:center; justify-content:space-between;
-      padding:0 14px;
-      font-weight:600;
-    }
-    .pill{
-      font-size:12px;
-      padding:6px 10px;
-      border-radius:999px;
-      background: rgba(255,77,141,.14);
-    }
-    .content{
-      padding:18px 18px 22px;
-      text-align:left;
-      line-height:1.55;
-      font-size:15px;
-      max-height: calc(100% - 46px);
-      overflow:auto;
-      white-space:pre-wrap; /* keeps line breaks */
-    }
-    .signature{
-      margin-top:14px;
-      font-family: ui-serif, Georgia, "Times New Roman", serif;
-      font-size:18px;
-    }
-
-    /* opened state */
-    .open .flap{ transform: rotateX(155deg); }
-    .open .letter{
-      transform: translateX(-50%) translateY(-18%);
-      opacity:1;
-    }
-
-    .btnrow{
-      margin-top:16px;
-      display:flex; gap:10px; justify-content:center; flex-wrap:wrap;
-    }
-    button{
-      border:0; padding:10px 14px; border-radius:12px;
-      background: white; box-shadow: 0 10px 25px rgba(0,0,0,.10);
-      cursor:pointer; font-weight:600;
-    }
-    button:hover{transform: translateY(-1px)}
-    .small{font-size:12px; opacity:.7; margin-top:10px}
-  </style>
+/* envelope */
+.envelope{
+position:relative;
+width:min(420px,90vw);
+height:260px;
+margin:auto;
+cursor:pointer;
+transform-style:preserve-3d;
+}
+.base{
+position:absolute;inset:0;
+border-radius:18px;
+background:linear-gradient(135deg,#ffd4e3,#ffe9f1 60%,#fff);
+box-shadow:var(--shadow);
+}
+.flap{
+position:absolute;left:0;right:0;top:0;
+height:62%;
+background:linear-gradient(135deg,#ffb6ce,#ffd9e6);
+clip-path: polygon(0 0,100% 0,50% 90%);
+transform-origin: top center;
+transition:transform .7s ease;
+border-radius:18px 18px 0 0;
+}
+.seal{
+position:absolute;
+left:50%;top:56%;
+width:54px;height:54px;
+transform:translate(-50%,-50%);
+border-radius:50%;
+background:#ff5a98;
+display:grid;place-items:center;
+color:white;font-size:22px;
+box-shadow:0 10px 18px rgba(0,0,0,.16);
+}
+.letter{
+position:absolute;
+left:50%;bottom:18px;
+width:88%;height:88%;
+transform:translateX(-50%) translateY(30%);
+background:var(--paper);
+border-radius:14px;
+box-shadow:0 10px 22px rgba(0,0,0,.10);
+transition:all .8s ease;
+opacity:0;
+padding:18px;
+overflow:auto;
+white-space:pre-wrap;
+font-size:15px;
+line-height:1.6;
+}
+.open .flap{transform:rotateX(155deg);}
+.open .letter{
+transform:translateX(-50%) translateY(-18%);
+opacity:1;
+}
+.signature{
+margin-top:20px;
+font-family:Georgia,serif;
+font-size:18px;
+}
+</style>
 </head>
 <body>
-  <div class="hearts" id="hearts"></div>
 
-  <div class="wrap">
-    <h1>Tap the envelope 💌</h1>
-    <p class="hint">A little note is inside…</p>
+<div class="wrap">
+<h1>Tap the envelope 💌</h1>
+<p class="hint">A little note is inside…</p>
 
-    <div class="envelope-area">
-      <div class="envelope" id="env" role="button" tabindex="0" aria-label="Open the letter">
-        <div class="env-shadow"></div>
-        <div class="base"></div>
+<div class="envelope" id="env">
+<div class="base"></div>
 
-        <div class="letter" id="letter" aria-hidden="true">
-          <div class="topbar">
-            <div>For you 💗</div>
-            <div class="pill">valentine</div>
-          </div>
-          <div class="content">
+<div class="letter">
 Hiii Bujjiii 💌❤️
 
 Happyyy Valentinesss my loveeeee…
@@ -258,54 +159,17 @@ And I am the luckiest person alive to call you mine.
 
 Forever yours,
 Your Jaanu ❤️
-          </div>
-        </div>
+</div>
 
-        <div class="flap"></div>
-        <div class="seal"><span>❤</span></div>
-        <div class="front"></div>
-      </div>
+<div class="flap"></div>
+<div class="seal">❤</div>
+</div>
+</div>
 
-      <div class="btnrow">
-        <button id="toggleBtn" type="button">Open / Close</button>
-      </div>
-      <div class="small">Tip: Put this in CodePen → Share → Copy Link → send it 💌</div>
-    </div>
-  </div>
+<script>
+const env=document.getElementById("env");
+env.addEventListener("click",()=>env.classList.toggle("open"));
+</script>
 
-  <script>
-    // floating hearts
-    const hearts = document.getElementById('hearts');
-    for(let i=0;i<18;i++){
-      const h=document.createElement('div');
-      h.className='heart';
-      h.style.left = Math.random()*100+'vw';
-      h.style.animationDuration = (8 + Math.random()*10)+'s';
-      h.style.animationDelay = (-Math.random()*10)+'s';
-      h.style.opacity = (0.08 + Math.random()*0.18).toFixed(2);
-      const s = (10 + Math.random()*14);
-      h.style.width = s+'px';
-      h.style.height = s+'px';
-      hearts.appendChild(h);
-    }
-
-    const env = document.getElementById('env');
-    const letter = document.getElementById('letter');
-    const toggle = () => {
-      env.classList.toggle('open');
-      const isOpen = env.classList.contains('open');
-      letter.setAttribute('aria-hidden', String(!isOpen));
-    };
-
-    env.addEventListener('click', toggle);
-    env.addEventListener('keydown', (e)=> {
-      if(e.key === 'Enter' || e.key === ' ') { e.preventDefault(); toggle(); }
-    });
-
-    document.getElementById('toggleBtn').addEventListener('click', (e) => {
-      e.stopPropagation();
-      toggle();
-    });
-  </script>
 </body>
 </html>
